Fix Mockito tests by adding the magic JVM flags